--- a/apipractice.html
+++ b/apipractice.html
@@ -24,7 +24,7 @@
     console.log(response.Director);
     $("title").html(response.Plot);
     $(".test").html(response.Plot);
-    // $(".test").text(JSON.stringify(response));
+    $(".test").text(JSON.stringify(response));
 
   });
     
